@@ -1,7 +1,7 @@
 /*
  * File   : $Source: /alkacon/cvs/opencms/src/org/opencms/staticexport/CmsStaticExportManager.java,v $
- * Date   : $Date: 2006/07/19 12:38:16 $
- * Version: $Revision: 1.122 $
+ * Date   : $Date: 2007/07/04 16:57:22 $
+ * Version: $Revision: 1.123 $
  *
  * This library is part of OpenCms -
  * the Open Source Content Mananagement System
@@ -47,6 +47,7 @@ import org.opencms.main.CmsEvent;
 import org.opencms.main.CmsException;
 import org.opencms.main.CmsIllegalArgumentException;
 import org.opencms.main.CmsLog;
+import org.opencms.main.CmsSystemInfo;
 import org.opencms.main.I_CmsEventListener;
 import org.opencms.main.OpenCms;
 import org.opencms.report.CmsLogReport;
@@ -84,7 +85,7 @@ import org.apache.commons.logging.Log;
  * @author Alexander Kandzior 
  * @author Michael Moossen 
  * 
- * @version $Revision: 1.122 $ 
+ * @version $Revision: 1.123 $ 
  * 
  * @since 6.0.0 
  */
@@ -102,8 +103,17 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     /** Marker for error status code attribute. */
     public static final String EXPORT_ATTRIBUTE_ERROR_STATUS_CODE = "javax.servlet.error.status_code";
 
+    /** Name for the backup folder default name. */
+    public static final String EXPORT_BACKUP_FOLDER_NAME = "backup";
+
+    /** Name for the default work path. */
+    public static final Integer EXPORT_DEFAULT_BACKUPS = new Integer(0);
+
     /** Name for the folder default index file. */
     public static final String EXPORT_DEFAULT_FILE = "index_export.html";
+
+    /** Name for the default work path. */
+    public static final String EXPORT_DEFAULT_WORKPATH = CmsSystemInfo.FOLDER_WEBINF + "temp";
 
     /** Flag value for links without paramerters. */
     public static final int EXPORT_LINK_WITH_PARAMETER = 2;
@@ -122,9 +132,6 @@ public class CmsStaticExportManager implements I_CmsEventListener {
 
     /** The log object for this class. */
     private static final Log LOG = CmsLog.getLog(CmsStaticExportManager.class);
-
-    /** Matcher for  selecting those resources which should be part of the staic export. */
-    private static CmsExportFolderMatcher m_exportFolderMatcher;
 
     /** HTTP header Accept-Charset. */
     private String m_acceptCharsetHeader;
@@ -149,6 +156,9 @@ public class CmsStaticExportManager implements I_CmsEventListener {
 
     /** OpenCms default locale header. */
     private String m_defaultAcceptLanguageHeader;
+
+    /** Matcher for  selecting those resources which should be part of the staic export. */
+    private CmsExportFolderMatcher m_exportFolderMatcher;
 
     /** List of export resources which should be part of the static export. */
     private List m_exportFolders;
@@ -183,6 +193,9 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     /** Export url to send internal requests to without http://servername. */
     private String m_exportUrlPrefix;
 
+    /** Boolean value if the export is a full static export. */
+    private boolean m_fullStaticExport;
+
     /** Handler class for static export. */
     private I_CmsStaticExportHandler m_handler;
 
@@ -213,6 +226,9 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     /** Temporary variable for reading the xml config file. */
     private CmsStaticExportRfsRule m_rfsTmpRule;
 
+    /** The number of backups stored for the export folder. */
+    private Integer m_staticExportBackups;
+
     /** Indicates if the static export is enabled or diabled. */
     private boolean m_staticExportEnabled;
 
@@ -221,6 +237,12 @@ public class CmsStaticExportManager implements I_CmsEventListener {
 
     /** The path to where the static export will be written without the complete rfs path. */
     private String m_staticExportPathConfigured;
+
+    /** The path to where the static export will be written during the static export process. */
+    private String m_staticExportWorkPath;
+
+    /** The path to where the static export will be written during the static export process without the complete rfs path. */
+    private String m_staticExportWorkPathConfigured;
 
     /** Vfs Name of a resource used to do a "static export required" test. */
     private String m_testResource;
@@ -246,7 +268,8 @@ public class CmsStaticExportManager implements I_CmsEventListener {
         m_rfsRules = new ArrayList();
         m_exportRules = new ArrayList();
         m_exportTmpRule = new CmsStaticExportExportRule("", "");
-        m_rfsTmpRule = new CmsStaticExportRfsRule("", "", "", "", "", null);
+        m_rfsTmpRule = new CmsStaticExportRfsRule("", "", "", "", "", "", null, null);
+        m_fullStaticExport = false;
     }
 
     /**
@@ -293,7 +316,10 @@ public class CmsStaticExportManager implements I_CmsEventListener {
      * @param source the source regex
      * @param rfsPrefix the url prefix
      * @param exportPath the rfs export path
+     * @param exportWorkPath the rfs export work path
+     * @param exportBackups the number of backups
      * @param useRelativeLinks the relative links value
+     * @throws CmsStaticExportException if given export path exists already
      */
     public void addRfsRule(
         String name,
@@ -301,18 +327,38 @@ public class CmsStaticExportManager implements I_CmsEventListener {
         String source,
         String rfsPrefix,
         String exportPath,
-        String useRelativeLinks) {
+        String exportWorkPath,
+        String exportBackups,
+        String useRelativeLinks) throws CmsStaticExportException {
+
+        if (m_staticExportPathConfigured != null && exportPath.equals(m_staticExportPathConfigured)) {
+            throw new CmsStaticExportException(Messages.get().container(Messages.ERR_VALIDATE_EXPORTPATH_0));
+        }
+
+        if (!m_rfsRules.isEmpty()) {
+            Iterator itRules = m_rfsRules.iterator();
+            while (itRules.hasNext()) {
+                CmsStaticExportRfsRule rule = (CmsStaticExportRfsRule)itRules.next();
+                if (exportPath.equals(rule.getExportPathConfigured())) {
+                    throw new CmsStaticExportException(Messages.get().container(Messages.ERR_VALIDATE_EXPORTPATH_0));
+                }
+            }
+        }
 
         Boolean relativeLinks = (useRelativeLinks == null ? null : Boolean.valueOf(useRelativeLinks));
+        Integer backups = (exportBackups == null ? null : Integer.valueOf(exportBackups));
+
         m_rfsRules.add(new CmsStaticExportRfsRule(
             name,
             description,
             source,
             rfsPrefix,
             exportPath,
+            exportWorkPath,
+            backups,
             relativeLinks,
             m_rfsTmpRule.getRelatedSystemResources()));
-        m_rfsTmpRule = new CmsStaticExportRfsRule("", "", "", "", "", null);
+        m_rfsTmpRule = new CmsStaticExportRfsRule("", "", "", "", "", "", null, null);
     }
 
     /**
@@ -357,20 +403,36 @@ public class CmsStaticExportManager implements I_CmsEventListener {
      */
     public void cmsEvent(CmsEvent event) {
 
+        if (!isStaticExportEnabled()) {
+            if (LOG.isWarnEnabled()) {
+                LOG.warn(Messages.get().getBundle().key(Messages.LOG_STATIC_EXPORT_DISABLED_0));
+            }
+            return;
+        }
+        I_CmsReport report = null;
+        Map data = event.getData();
+        if (data != null) {
+            report = (I_CmsReport)data.get(I_CmsEventListener.KEY_REPORT);
+        }
+        if (report == null) {
+            report = new CmsLogReport(CmsLocaleManager.getDefaultLocale(), getClass());
+        }
         switch (event.getType()) {
             case I_CmsEventListener.EVENT_UPDATE_EXPORTS:
-                scrubExportFolders(null);
+                scrubExportFolders(report);
                 clearCaches(event);
                 break;
             case I_CmsEventListener.EVENT_PUBLISH_PROJECT:
+                if (data == null) {
+                    if (LOG.isErrorEnabled()) {
+                        LOG.error(Messages.get().getBundle().key(Messages.ERR_EMPTY_EVENT_DATA_0));
+                    }
+                    return;
+                }
                 // event data contains a list of the published resources
-                CmsUUID publishHistoryId = new CmsUUID((String)event.getData().get(I_CmsEventListener.KEY_PUBLISHID));
+                CmsUUID publishHistoryId = new CmsUUID((String)data.get(I_CmsEventListener.KEY_PUBLISHID));
                 if (LOG.isDebugEnabled()) {
                     LOG.debug(Messages.get().getBundle().key(Messages.LOG_EVENT_PUBLISH_PROJECT_1, publishHistoryId));
-                }
-                I_CmsReport report = (I_CmsReport)event.getData().get(I_CmsEventListener.KEY_REPORT);
-                if (report == null) {
-                    report = new CmsLogReport(CmsLocaleManager.getDefaultLocale(), getClass());
                 }
                 synchronized (m_lockCmsEvent) {
                     getHandler().performEventPublishProject(publishHistoryId, report);
@@ -433,7 +495,9 @@ public class CmsStaticExportManager implements I_CmsEventListener {
             "/",
             i18nInfo.getLocale(),
             i18nInfo.getEncoding(),
-            remoteAddr);
+            remoteAddr,
+            CmsContextInfo.CURRENT_TIME,
+            cms.getRequestContext().getOuFqn());
 
         cms = OpenCms.initCmsObject(null, contextInfo);
 
@@ -557,9 +621,16 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     public synchronized void exportFullStaticRender(boolean purgeFirst, I_CmsReport report)
     throws CmsException, IOException, ServletException {
 
+        // set member to true to get temporary export paths for rules
+        m_fullStaticExport = true;
+        // save the real export path
+        String staticExportPathStore = m_staticExportPath;
+
+        // set the export path to the export work path
+        m_staticExportPath = m_staticExportWorkPath;
+
         // delete all old exports if the purgeFirst flag is set
         if (purgeFirst) {
-
             Map eventData = new HashMap();
             eventData.put(I_CmsEventListener.KEY_REPORT, report);
             CmsEvent clearCacheEvent = new CmsEvent(I_CmsEventListener.EVENT_CLEAR_CACHES, eventData);
@@ -575,6 +646,42 @@ public class CmsStaticExportManager implements I_CmsEventListener {
         CmsAfterPublishStaticExportHandler handler = new CmsAfterPublishStaticExportHandler();
         // export everything
         handler.doExportAfterPublish(null, report);
+
+        // set export path to the original one
+        m_staticExportPath = staticExportPathStore;
+
+        // set member to false for further exports
+        m_fullStaticExport = false;
+
+        // check if report contents no errors
+        if (!report.hasError()) {
+            // backup old export folders for default export 
+            File staticExport = new File(m_staticExportPath);
+            createExportBackupFolders(staticExport, m_staticExportPath, getExportBackups().intValue(), null);
+
+            // change the name of the used temporary export folder to the original default export path
+            File staticExportWork = new File(m_staticExportWorkPath);
+            staticExportWork.renameTo(new File(m_staticExportPath));
+
+            // backup old export folders of rule based exports
+            Iterator it = m_rfsRules.iterator();
+            while (it.hasNext()) {
+                CmsStaticExportRfsRule rule = (CmsStaticExportRfsRule)it.next();
+                File staticExportRule = new File(rule.getExportPath());
+                File staticExportWorkRule = new File(rule.getExportWorkPath());
+                // only backup if a temporary folder exists for this rule
+                if (staticExportWorkRule.exists()) {
+                    createExportBackupFolders(
+                        staticExportRule,
+                        rule.getExportPath(),
+                        rule.getExportBackups().intValue(),
+                        OpenCms.getResourceManager().getFileTranslator().translateResource(rule.getName()));
+                    staticExportWorkRule.renameTo(new File(rule.getExportPath()));
+                }
+            }
+        } else {
+            report.println(Messages.get().container(Messages.ERR_EXPORT_NOT_SUCCESSFUL_0), I_CmsReport.FORMAT_WARNING);
+        }
     }
 
     /**
@@ -673,6 +780,20 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     public String getDefaultRfsPrefix() {
 
         return m_rfsPrefix;
+    }
+
+    /**
+     * Returns the number of stored backusp.<p>
+     * 
+     * @return the number of stored backups
+     */
+    public Integer getExportBackups() {
+
+        if (m_staticExportBackups != null) {
+            return m_staticExportBackups;
+        }
+        // if backups not configured set to default value
+        return EXPORT_DEFAULT_BACKUPS;
     }
 
     /**
@@ -810,6 +931,9 @@ public class CmsStaticExportManager implements I_CmsEventListener {
                 }
             }
         }
+        if (isFullStaticExport()) {
+            return getExportWorkPath();
+        }
         return m_staticExportPath;
     }
 
@@ -893,6 +1017,32 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     public String getExportUrlPrefix() {
 
         return m_exportUrlPrefix;
+    }
+
+    /**
+     * Returns the export work path for the static export, that is the folder where the 
+     * static exported resources will be written to during the export process.<p>
+     * 
+     * @return the export work path for the static export
+     */
+    public String getExportWorkPath() {
+
+        return m_staticExportWorkPath;
+    }
+
+    /**
+     * Returns the original configured export work path for the static export without the complete rfs path, to be used 
+     * when re-writing the configuration.<p>
+     * 
+     * @return the original configured export work path for the static export without the complete rfs path
+     */
+    public String getExportWorkPathForConfiguration() {
+
+        if (m_staticExportWorkPathConfigured != null) {
+            return m_staticExportWorkPathConfigured;
+        }
+        // if work path not configured set to default value
+        return EXPORT_DEFAULT_WORKPATH;
     }
 
     /**
@@ -1037,7 +1187,7 @@ public class CmsStaticExportManager implements I_CmsEventListener {
                 rfsName = exportname + rfsName.substring(resourceName.length());
             }
 
-            String extension = CmsFileUtil.getFileExtension(rfsName);
+            String extension = CmsFileUtil.getExtension(rfsName);
             // check if the VFS resouce is a JSP page with a ".jsp" ending 
             // in this case the rfs name suffix must be build with special care,
             // usually it must be set to ".html"             
@@ -1220,6 +1370,7 @@ public class CmsStaticExportManager implements I_CmsEventListener {
 
         // initialize static export RFS path (relative to web application)
         m_staticExportPath = normalizeExportPath(m_staticExportPathConfigured);
+        m_staticExportWorkPath = normalizeExportPath(getExportWorkPathForConfiguration());
         if (m_staticExportPath.equals(OpenCms.getSystemInfo().getWebApplicationRfsPath())) {
             throw new CmsIllegalArgumentException(Messages.get().container(Messages.ERR_INVALID_EXPORT_PATH_0));
         }
@@ -1230,9 +1381,11 @@ public class CmsStaticExportManager implements I_CmsEventListener {
             CmsStaticExportRfsRule rule = (CmsStaticExportRfsRule)itRfsRules.next();
             try {
                 rule.setExportPath(normalizeExportPath(rule.getExportPathConfigured()));
+                rule.setExportWorkPath(normalizeExportPath(rule.getExportWorkPathConfigured()));
             } catch (CmsIllegalArgumentException e) {
                 CmsLog.INIT.info(e.getMessageContainer());
                 rule.setExportPath(m_staticExportPath);
+                rule.setExportWorkPath(m_staticExportWorkPath);
             }
             rule.setRfsPrefix(normalizeRfsPrefix(rule.getRfsPrefixConfigured()));
         }
@@ -1252,31 +1405,23 @@ public class CmsStaticExportManager implements I_CmsEventListener {
 
         LRUMap lruMap1 = new LRUMap(2048);
         m_cacheOnlineLinks = Collections.synchronizedMap(lruMap1);
-        if (OpenCms.getMemoryMonitor().enabled()) {
-            // map must be of type "LRUMap" so that memory monitor can acecss all information
-            OpenCms.getMemoryMonitor().register(this.getClass().getName() + ".m_cacheOnlineLinks", lruMap1);
-        }
+        // map must be of type "LRUMap" so that memory monitor can acecss all information
+        OpenCms.getMemoryMonitor().register(this.getClass().getName() + ".m_cacheOnlineLinks", lruMap1);
 
         LRUMap lruMap2 = new LRUMap(2048);
         m_cacheExportUris = Collections.synchronizedMap(lruMap2);
-        if (OpenCms.getMemoryMonitor().enabled()) {
-            // map must be of type "LRUMap" so that memory monitor can acecss all information
-            OpenCms.getMemoryMonitor().register(this.getClass().getName() + ".m_cacheExportUris", lruMap2);
-        }
+        // map must be of type "LRUMap" so that memory monitor can acecss all information
+        OpenCms.getMemoryMonitor().register(this.getClass().getName() + ".m_cacheExportUris", lruMap2);
 
         LRUMap lruMap3 = new LRUMap(2048);
         m_cacheSecureLinks = Collections.synchronizedMap(lruMap3);
-        if (OpenCms.getMemoryMonitor().enabled()) {
-            // map must be of type "LRUMap" so that memory monitor can acecss all information
-            OpenCms.getMemoryMonitor().register(this.getClass().getName() + ".m_cacheSecureLinks", lruMap3);
-        }
+        // map must be of type "LRUMap" so that memory monitor can acecss all information
+        OpenCms.getMemoryMonitor().register(this.getClass().getName() + ".m_cacheSecureLinks", lruMap3);
 
         LRUMap lruMap4 = new LRUMap(2048);
         m_cacheExportLinks = Collections.synchronizedMap(lruMap4);
-        if (OpenCms.getMemoryMonitor().enabled()) {
-            // map must be of type "LRUMap" so that memory monitor can acecss all information
-            OpenCms.getMemoryMonitor().register(this.getClass().getName() + ".m_cacheExportLinks", lruMap4);
-        }
+        // map must be of type "LRUMap" so that memory monitor can acecss all information
+        OpenCms.getMemoryMonitor().register(this.getClass().getName() + ".m_cacheExportLinks", lruMap4);
 
         // register this object as event listener
         OpenCms.addCmsEventListener(this, new int[] {
@@ -1314,7 +1459,7 @@ public class CmsStaticExportManager implements I_CmsEventListener {
                 CmsLog.INIT.info(Messages.get().getBundle().key(Messages.INIT_STATIC_EXPORT_ENABLED_0));
                 CmsLog.INIT.info(Messages.get().getBundle().key(
                     Messages.INIT_EXPORT_DEFAULT_1,
-                    new Boolean(getExportPropertyDefault())));
+                    Boolean.valueOf(getExportPropertyDefault())));
                 itRfsRules = m_rfsRules.iterator();
                 while (itRfsRules.hasNext()) {
                     CmsStaticExportRfsRule rfsRule = (CmsStaticExportRfsRule)itRfsRules.next();
@@ -1417,12 +1562,24 @@ public class CmsStaticExportManager implements I_CmsEventListener {
                 } catch (Exception e) {
                     // no export required (probably security issues, e.g. no access for export user)
                 }
-                m_cacheExportLinks.put(getCacheKey(cms.getRequestContext().getSiteRoot(), vfsName), new Boolean(result));
+                m_cacheExportLinks.put(
+                    getCacheKey(cms.getRequestContext().getSiteRoot(), vfsName),
+                    Boolean.valueOf(result));
             } else {
                 result = exportResource.booleanValue();
             }
         }
         return result;
+    }
+
+    /**
+     * Returns true if the export process is a full static export.<p>
+     *
+     * @return true if the export process is a full static export
+     */
+    public boolean isFullStaticExport() {
+
+        return m_fullStaticExport;
     }
 
     /**
@@ -1486,13 +1643,13 @@ public class CmsStaticExportManager implements I_CmsEventListener {
             return isSecureLink(cms, vfsName);
         }
 
-        // the site root of the cms object has to be changed so that the property can be read    
+        // the site root of the cms object has to be changed so that the property can be read   
+        String storedSiteRoot = cms.getRequestContext().getSiteRoot();
         try {
-            cms.getRequestContext().saveSiteRoot();
             cms.getRequestContext().setSiteRoot(siteRoot);
             return isSecureLink(cms, vfsName);
         } finally {
-            cms.getRequestContext().restoreSiteRoot();
+            cms.getRequestContext().setSiteRoot(storedSiteRoot);
         }
     }
 
@@ -1578,6 +1735,16 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     }
 
     /**
+     * Sets the number of backups for the static export.<p>
+     * 
+     * @param backup number of backups
+     */
+    public void setExportBackups(String backup) {
+
+        m_staticExportBackups = new Integer(backup);
+    }
+
+    /**
      * Sets the export enbled value.<p>
      * 
      * @param value must be <code>"true"</code> or <code>"false"</code>
@@ -1650,6 +1817,16 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     }
 
     /**
+     * Sets the path where the static export is temporarily written.<p>
+     * 
+     * @param path the path where the static export is temporarily written
+     */
+    public void setExportWorkPath(String path) {
+
+        m_staticExportWorkPathConfigured = path;
+    }
+
+    /**
      * Sets the static export handler class.<p>
      * 
      * @param handlerClassName the static export handler class name.
@@ -1660,7 +1837,7 @@ public class CmsStaticExportManager implements I_CmsEventListener {
             m_handler = (I_CmsStaticExportHandler)Class.forName(handlerClassName).newInstance();
         } catch (Exception e) {
             // should never happen
-            LOG.error(e);
+            LOG.error(e.getLocalizedMessage(), e);
         }
     }
 
@@ -1743,7 +1920,7 @@ public class CmsStaticExportManager implements I_CmsEventListener {
                         String.valueOf(count),
                         String.valueOf(HANDLER_FINISH_TIME)));
                 }
-                Thread.sleep(1000);
+                wait(1000);
             } catch (InterruptedException e) {
                 // if interrupted we ignore the handler, this will produce some log messages but should be ok 
                 count = HANDLER_FINISH_TIME;
@@ -1793,7 +1970,7 @@ public class CmsStaticExportManager implements I_CmsEventListener {
      * @param rfsName the name of the RFS resource
      * @return the name of the VFS resource
      */
-    /*package*/String getVfsNameInternal(CmsObject cms, String rfsName) {
+    String getVfsNameInternal(CmsObject cms, String rfsName) {
 
         String vfsName = null;
         CmsResource resource;
@@ -1815,13 +1992,14 @@ public class CmsStaticExportManager implements I_CmsEventListener {
             // name of export resource could not be resolved by reading the resource directly,
             // now try to find a match with the "exportname" folders            
             Map exportnameFolders = getExportnames();
-            Iterator i = exportnameFolders.keySet().iterator();
+            Iterator i = exportnameFolders.entrySet().iterator();
             while (i.hasNext()) {
-                String exportName = (String)i.next();
+                Map.Entry entry = (Map.Entry)i.next();
+                String exportName = (String)entry.getKey();
                 if (rfsName.startsWith(exportName)) {
                     // prefix match
                     match = true;
-                    vfsName = exportnameFolders.get(exportName) + rfsName.substring(exportName.length());
+                    vfsName = "" + entry.getValue() + rfsName.substring(exportName.length());
                     try {
                         resource = cms.readResource(vfsName);
                         if (resource.isFolder()) {
@@ -1838,7 +2016,6 @@ public class CmsStaticExportManager implements I_CmsEventListener {
                         match = false;
                         continue;
                     } catch (CmsException e) {
-                        rfsName = null;
                         break;
                     }
                 }
@@ -1894,6 +2071,51 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     }
 
     /**
+     * Creates the backup folders for the given export folder and deletes the oldest if the maximum number is reached.<p>
+     * 
+     * @param staticExport folder for which a new backup folder has to be created
+     * @param exportPath export path to create backup path out of it
+     * @param exportBackups number of maximum 
+     * @param ruleBackupExtension extension for rule based backups
+     */
+    private void createExportBackupFolders(
+        File staticExport,
+        String exportPath,
+        int exportBackups,
+        String ruleBackupExtension) {
+
+        if (staticExport.exists()) {
+            String backupFolderName = exportPath.substring(0, exportPath.lastIndexOf(File.separator) + 1);
+            if (ruleBackupExtension != null) {
+                backupFolderName = backupFolderName + EXPORT_BACKUP_FOLDER_NAME + ruleBackupExtension;
+            } else {
+                backupFolderName = backupFolderName + EXPORT_BACKUP_FOLDER_NAME;
+            }
+            for (int i = exportBackups; i > 0; i--) {
+                File staticExportBackupOld = new File(backupFolderName + new Integer(i).toString());
+                if (staticExportBackupOld.exists()) {
+                    if ((i + 1) > exportBackups) {
+                        // delete folder if it is the last backup folder
+                        CmsFileUtil.purgeDirectory(staticExportBackupOld);
+                    } else {
+                        // set backup folder to the next backup folder name
+                        staticExportBackupOld.renameTo(new File(backupFolderName + new Integer(i + 1).toString()));
+                    }
+                }
+                // old export folder rename to first backup folder
+                if (i == 1) {
+                    staticExport.renameTo(staticExportBackupOld);
+                }
+            }
+
+            // if no backups will be stored the old export folder has to be deleted
+            if (exportBackups == 0) {
+                CmsFileUtil.purgeDirectory(staticExport);
+            }
+        }
+    }
+
+    /**
      * Creates the parent folder for a exported resource in the RFS.<p>
      * 
      * @param exportPath the path to export the file
@@ -1924,7 +2146,7 @@ public class CmsStaticExportManager implements I_CmsEventListener {
     private CmsStaticExportData getExportData(String rfsName, String vfsName, CmsObject cms) {
 
         CmsResource resource = null;
-        cms.getRequestContext().saveSiteRoot();
+        String storedSiteRoot = cms.getRequestContext().getSiteRoot();
         try {
             cms.getRequestContext().setSiteRoot("/");
 
@@ -1959,19 +2181,15 @@ public class CmsStaticExportManager implements I_CmsEventListener {
                 }
             } else {
                 // export uri not in cache, must look up the file in the VFS
-                boolean match = false;
-
                 vfsName = getVfsNameInternal(cms, rfsName);
                 if (vfsName != null) {
-                    match = true;
                     try {
                         resource = cms.readResource(vfsName);
-                    } catch (CmsException e) {
-                        rfsName = null;
+                    } catch (Exception e) {
+                        // ignore, still not found
                     }
                 }
-
-                if (!match) {
+                if (resource == null) {
                     // it could be a translated resourcename with parameters, so make a lookup
                     // in the published resources table
                     try {
@@ -2010,7 +2228,7 @@ public class CmsStaticExportManager implements I_CmsEventListener {
                 }
             }
         } finally {
-            cms.getRequestContext().restoreSiteRoot();
+            cms.getRequestContext().setSiteRoot(storedSiteRoot);
         }
     }
 
@@ -2196,34 +2414,34 @@ public class CmsStaticExportManager implements I_CmsEventListener {
         try {
             cms = OpenCms.initCmsObject(OpenCms.getDefaultUsers().getUserExport());
             resources = cms.readResourcesWithProperty(CmsPropertyDefinition.PROPERTY_EXPORTNAME);
-        } catch (CmsException e) {
-            resources = Collections.EMPTY_LIST;
-        }
 
-        synchronized (m_lockSetExportnames) {
-            m_exportnameResources = new HashMap(resources.size());
-            for (int i = 0, n = resources.size(); i < n; i++) {
-                CmsResource res = (CmsResource)resources.get(i);
-                try {
-                    String foldername = cms.getSitePath(res);
-                    String exportname = cms.readPropertyObject(
-                        foldername,
-                        CmsPropertyDefinition.PROPERTY_EXPORTNAME,
-                        false).getValue();
-                    if (exportname != null) {
-                        if (exportname.charAt(exportname.length() - 1) != '/') {
-                            exportname = exportname + "/";
+            synchronized (m_lockSetExportnames) {
+                m_exportnameResources = new HashMap(resources.size());
+                for (int i = 0, n = resources.size(); i < n; i++) {
+                    CmsResource res = (CmsResource)resources.get(i);
+                    try {
+                        String foldername = cms.getSitePath(res);
+                        String exportname = cms.readPropertyObject(
+                            foldername,
+                            CmsPropertyDefinition.PROPERTY_EXPORTNAME,
+                            false).getValue();
+                        if (exportname != null) {
+                            if (exportname.charAt(exportname.length() - 1) != '/') {
+                                exportname = exportname + "/";
+                            }
+                            if (exportname.charAt(0) != '/') {
+                                exportname = "/" + exportname;
+                            }
+                            m_exportnameResources.put(exportname, foldername);
                         }
-                        if (exportname.charAt(0) != '/') {
-                            exportname = "/" + exportname;
-                        }
-                        m_exportnameResources.put(exportname, foldername);
+                    } catch (CmsException e) {
+                        // ignore, folder will not be added
                     }
-                } catch (CmsException e) {
-                    // ignore exception, folder will no be added
                 }
+                m_exportnameResources = Collections.unmodifiableMap(m_exportnameResources);
             }
-            m_exportnameResources = Collections.unmodifiableMap(m_exportnameResources);
+        } catch (CmsException e) {
+            // ignore, no resources will be added at all
         }
         if (LOG.isDebugEnabled()) {
             LOG.debug(Messages.get().getBundle().key(Messages.LOG_UPDATE_EXPORTNAME_PROP_FINISHED_0));
@@ -2257,40 +2475,37 @@ public class CmsStaticExportManager implements I_CmsEventListener {
         createExportFolder(exportPath, rfsName);
         // generate export file instance and output stream
         exportFile = new File(exportFileName);
+        // write new exported file content
+        try {
+            FileOutputStream exportStream = new FileOutputStream(exportFile);
+            exportStream.write(content);
+            exportStream.close();
 
-        if (exportFile != null) {
-            // write new exported file content
-            try {
-                FileOutputStream exportStream = new FileOutputStream(exportFile);
-                exportStream.write(content);
-                exportStream.close();
-
-                // log export success 
-                if (LOG.isInfoEnabled()) {
-                    LOG.info(Messages.get().getBundle().key(Messages.LOG_STATIC_EXPORTED_2, vfsName, exportFileName));
-                }
-
-            } catch (Throwable t) {
-                throw new CmsStaticExportException(Messages.get().container(
-                    Messages.ERR_OUTPUT_STREAM_1,
-                    exportFileName), t);
+            // log export success 
+            if (LOG.isInfoEnabled()) {
+                LOG.info(Messages.get().getBundle().key(Messages.LOG_STATIC_EXPORTED_2, vfsName, exportFileName));
             }
-            // update the file with the modification date from the server
-            if (req != null) {
-                Long dateLastModified = (Long)req.getAttribute(CmsRequestUtil.HEADER_OPENCMS_EXPORT);
-                if ((dateLastModified != null) && (dateLastModified.longValue() != -1)) {
-                    exportFile.setLastModified((dateLastModified.longValue() / 1000) * 1000);
-                    if (LOG.isDebugEnabled()) {
-                        LOG.debug(Messages.get().getBundle().key(
-                            Messages.LOG_SET_LAST_MODIFIED_2,
-                            exportFile.getName(),
-                            new Long((dateLastModified.longValue() / 1000) * 1000)));
-                    }
+
+        } catch (Throwable t) {
+            throw new CmsStaticExportException(
+                Messages.get().container(Messages.ERR_OUTPUT_STREAM_1, exportFileName),
+                t);
+        }
+        // update the file with the modification date from the server
+        if (req != null) {
+            Long dateLastModified = (Long)req.getAttribute(CmsRequestUtil.HEADER_OPENCMS_EXPORT);
+            if ((dateLastModified != null) && (dateLastModified.longValue() != -1)) {
+                exportFile.setLastModified((dateLastModified.longValue() / 1000) * 1000);
+                if (LOG.isDebugEnabled()) {
+                    LOG.debug(Messages.get().getBundle().key(
+                        Messages.LOG_SET_LAST_MODIFIED_2,
+                        exportFile.getName(),
+                        new Long((dateLastModified.longValue() / 1000) * 1000)));
                 }
-            } else {
-                // otherweise take the last modification date form the OpenCms resource
-                exportFile.setLastModified((resource.getDateLastModified() / 1000) * 1000);
             }
+        } else {
+            // otherweise take the last modification date form the OpenCms resource
+            exportFile.setLastModified((resource.getDateLastModified() / 1000) * 1000);
         }
     }
 }
